tests/typing/fail/mismatch_prefix.crs
fn main() {
    var a : bool;
    ++a;

    var b : f64;
    ~b;
}